--- a/src/pages/code/code.scss
+++ b/src/pages/code/code.scss
@@ -84,6 +84,8 @@
     border-radius: 8px;
     padding: 15px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    max-height: 100%;
+    overflow-y: auto; /* 允许竖向滚动 */
   }
   
   .code-review-comment {
